<resources>
    <string name="app_name">App Interaction</string>
    <string name="text_view">App Interaction Test!</string>
    <string name="open_google">Open Google</string>
    <string name="call_tel">Call Tel</string>
    <string name="open_google_map">Open Google Map</string>
    <string name="open_a_map">Open AMap</string>
    <string name="send_email">Send Email</string>
    <string name="get_contact">Get Contact</string>
    <string name="chooser_title">Choose One App</string>
    <string name="button_share_data">Share Data</string>
    <string name="button_share_file">Share File</string>
    <string name="button_share_action_bar">Share ActonBar</string>

    <string name="button_action_bar_setWeb">Share Web</string>
    <string name="button_action_bar_setImage">Share Image</string>

</resources>
